jenkins/jenkins.namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jenkins
---
kind: Namespace
apiVersion: v1
metadata:
  name: app
